--- a/custom.css
+++ b/custom.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');)
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 body {
     padding:0px;
@@ -89,14 +89,25 @@ footer {
     color:white;
     Height: 5vh;    
     font-weight: bold;
+    flex-shrink: none;
+}
+
+#Content2 {
+    gap:32px;
+    padding:40px 180px;
+    align-items:center;
+    height: 80vh;
+    color:#ffff;    
 }
 
 .DataDiri {
-    display:flex;
     color:white;
-    Padding:20px;
 }
-    
+
+.Alert {
+    color:yellowgreen
+}
+
 @media (max-width: 640px) {
     .content {
         gap: 16px;
