--- a/custom.css
+++ b/custom.css
@@ -45,10 +45,9 @@ a {
 /* ----- Navigation Bar Start ----- */
 .navbar {
     display:flex;
-    gap: 70px;
     background-color: #1b1b1b;
     padding:15px 30px;
-    height: 15vh;    
+    height: 13vh;    
     align-items: center;
     justify-content:space-between;
     border-radius: 0px 0px 20px 20px;
@@ -99,14 +98,13 @@ a {
 /* ----- Container Main Content Start ----- */
 .home { /* Container Khusus Main Content Home */
     display:grid;
-    height:91vh;
+    height:92vh;
     padding: 0px 13%;    
-    padding-top: 8%;
+    padding-top: 10%;
 }
 
 .main { /* Container Khusus Main Content Semua Halaman Selain Home */
-    display:grid;
-    padding: 0px 150px;    
+    display:grid;   
     padding-top: 8%;
 }
 /* ----- Container Main Content End ----- */
@@ -156,7 +154,7 @@ a {
 
 .socialMedia {
     display: grid;
-    gap: 20px;
+    gap: 10px;
     padding-bottom: 20px;
 }
 
@@ -202,7 +200,7 @@ a {
     align-items: center;
     gap:15px;
     padding: 0 5%;
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 50px;
 }
 
@@ -260,6 +258,10 @@ a {
 
 }
 
+.Askill p {
+    text-align: center;
+}
+
 .Aexp {
     display: grid;
     gap: 30px;
@@ -270,6 +272,14 @@ a {
 }
 
 .Aexp h1 {
+    text-align: center;
+}
+
+.Aexp h3 {
+    text-align: center;
+}
+
+.Aexp h5 {
     text-align: center;
 }
 
@@ -339,7 +349,7 @@ footer {
 footer p {
     background-color:#1b1b1b;
     width:100%;    
-    height: 9vh;
+    height: 8vh;
     place-content: center;
     text-align: center;
     border-radius: 20px 20px 0px 0px;
@@ -349,87 +359,6 @@ footer p {
 /* ----- Unique Start ----- */
 .Alert {
     padding: 34vh 0vh;
+    text-align: center;
 }
 /* ----- Unique End ----- */
-
-/* ----- Responsive Website Style ----- */
-@media (max-width: 767px) {
-    .container {
-        width: fit-content;
-    }
-    
-    /* --- Navbar Responsive --- */
-    .navbar {
-        height: max-content;
-        padding:20px 35px;
-    }
-    
-    .nav-link {
-        display: none; /* Sembunyikan menu nav-link asli */
-        flex-direction: column;
-        position: absolute;
-        top: 70px;
-        right: 0;
-        background-color: #1b1b1b;
-        width: 200px;
-        text-align: center;
-        padding: 10px 0;
-    }
-
-    .nav-link a {
-        display: block;
-        padding: 10px 0;
-    }
-
-    .burger {
-        display: flex; /* Munculkan icon burger */
-    }
-
-    /* Animasi burger berubah jadi "X" saat aktif */
-    .burger.active .line1 {
-        transform: rotate(45deg) translate(5px, 5px);
-    }
-
-    .burger.active .line2 {
-        opacity: 0;
-    }
-
-    .burger.active .line3 {
-        transform: rotate(-45deg) translate(5px, -5px);
-    }
-
-    .nav-link.show {
-        display: flex;
-    }
-
-    /* --- Home Responsive --- */
-    .home {
-        height: max-content;
-        padding: 0px;
-        padding-top: 100px;
-    }
-
-    .started {
-        gap: 16px;
-        padding: 16px 24px;
-        flex-direction: column-reverse;
-    }
-
-    .socialMedia {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-top: 20px;
-    }
-    
-    .socialMedia div {
-        padding: 0px;
-        gap: 50px
-    }
-
-    /* --- About Responsive --- */
-    .Aprofil img {
-        width: 30%;
-    }
-}
-
