--- a/custom.css
+++ b/custom.css
@@ -52,6 +52,7 @@ a {
 .InPage {
     text-align: center;
     margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 /* ----- Reset Style End ----- */
@@ -352,7 +353,7 @@ a {
     display: grid;
     text-align: center;
     background-color: #1b1b1b;
-    margin:40px 20px 0px 20px;
+    margin:25px 20px 15px 20px;
     padding: 30px;
     border-radius: 20px;
 }
