update link download via javascript/blob dan membuka halaman Detail Project Automasi Buku Kepegawaian
merubah link downloadnya menggunakan javascript/blob, supaya nama file mudah dirubah,//, karena diganti Js/Blob, maka <a> diganti menjadi <span> supaya mudah, lalu diganti style nya.,//, mengupdate -Draft-Detail-Project.html dibagian download filenya.,//, Melengkapi Konten Halaman Automasi Buku Kepegawaian dan membuka Hidenya di 4portfolio.html.

--- a/custom.css
+++ b/custom.css
@@ -507,14 +507,15 @@ a {
     border-radius: 10px;
 }
 
-.DP-Content a {
+.DP-Content span {
     font-style: italic;
     text-decoration: underline;
     color:#b8b8b8;
     width: fit-content;
+    cursor: pointer;
 }
 
-.DP-Content a:hover {
+.DP-Content span:hover {
     color: yellow;
 }
 
