--- a/custom.css
+++ b/custom.css
@@ -86,6 +86,12 @@ a {
 
 .navJudul {
     font-weight: bold;
+    height:100%;
+}
+
+.navJudul img {
+    width: auto;
+    height: 100%;
 }
 
 .menu-navbar {
